# qml_qt6_template

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  fallback.qml  main.cpp  main.qml
cmake/: CMakeLists.txt  compiler_warnings.cmake
libs/version/: CMakeLists.txt  Version.qml  version.h
src/: CMakeLists.txt  app.qml  application.cpp  application.h  main.cpp  main.qml
src/libs/version/: About.qml  CMakeLists.txt  version.cpp
src/version/: CMakeLists.txt  version.h.in
version/: CMakeLists.txt
